# MGAIA-Minecraft

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
assignment/: brickhouse.py  buildregion_finder.py  e2e_brickhouse.py  farmhouse.py  structure_builder.py  structure_scanner.py  structure_showcase.py
assignment/utils/: buildregion.py  structure.py  structure_adjacency.py  structures.py  wave_function_collaplse_util.py  wave_function_collapse.py
docs/: .gitignore  literature.bib  report.tex  titlepage.tex
docs/listings/: structure_adjacency_excerpt.py  wave_function_collapse_simplified.py
structures/: brickhouse-balcony.pkl  brickhouse-big-window-flat-roof.pkl  brickhouse-center-flat-roof.pkl  brickhouse-center.pkl  brickhouse-corner.pkl  brickhouse-courtyard.pkl  brickhouse-entrance.pkl  brickhouse-inner-corner-m2m.pkl  brickhouse-middle.pkl  brickhouse-roofhouse-center.pkl  brickhouse-roofhouse-corner.pkl  brickhouse-roofhouse-courtyard.pkl  brickhouse-roofhouse-inner-corner-m2m.pkl  brickhouse-roofhouse-middle-to-flat-mirrored-x.pkl  brickhouse-roofhouse-middle-to-flat.pkl  brickhouse-roofhouse-middle.pkl  brickhouse-small-window-flat-roof.pkl  empty-space-air.pkl
structures/decoration/: brickhouse-center.pkl  brickhouse-corner.pkl  brickhouse-entrance.pkl  brickhouse-roofhouse-center.pkl  brickhouse-roofhouse-corner.pkl  brickhouse-roofhouse-middle.pkl
tests/: buildregion_finder_tests.py  structure_adjacency_tests.py  wave_function_collapse_air_tests.py  wave_function_collapse_tests.py
