[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["Tom Stein <dev@tomstein.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.12"
gdpc = {git = "https://github.com/avdstaaij/gdpc"}

# dependencies of gdpc which were not detected automatically
# matplotlib = "~3.6.2"
# more-itertools = "~9.0.0"
# NBT = "~1.5.1"
# numpy = "~1.19.3"
# opencv_python = "~4.5.1.48"
# PyGLM = "~2.7.0"
# pyglm-typing = "~0.2.1"
# requests = "~2.22.0"
# scikit-image = "~0.19.3"
# scipy = "~1.9.3"
# termcolor = "~2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
